--- a/test-repo/fabfile.ini
+++ b/test-repo/fabfile.ini
@@ -4,4 +4,4 @@ fablib = base: https://github.com/fabrickit-fablib/base.git,
 
 [test]
 clusters = 'centos7'
-clusters = 'ubuntu14'
+# clusters = 'ubuntu14'
