--- a/test-repo/nodes/bootstrap/node.yml
+++ b/test-repo/nodes/bootstrap/node.yml
@@ -3,21 +3,54 @@ node_map:
     hosts:
       - localhost
     fabruns:
-      - test_bootstrap/base
+      - test_bootstrap/libvirt
+      # - test_bootstrap/docker
 
 test_bootstrap:
-  dockers:
+  # dockers:
+  #   - name: centos7
+  #     template: Dockerfile_centos7
+  #     sudo_group: wheel
+  #     ports:
+  #       - [22, 31022]
+  #       - [80, 31080]
+  #       - [3306, 31306]
+  #   - name: ubuntu14
+  #     template: Dockerfile_ubuntu14
+  #     sudo_group: sudo
+  #     ports:
+  #       - [22, 32022]
+  #       - [80, 32080]
+  #       - [3306, 32306]
+  libvirt:
+    gateway: 192.168.122.1
+    netmask: 255.255.255.0
+  libvirt_vms:
     - name: centos7
-      template: Dockerfile_centos7
-      sudo_group: wheel
+      template: user-data_centos7
+      src_image: http://cloud.centos.org/centos/7/images/CentOS-7-x86_64-GenericCloud-1511.qcow2c.xz
+      vcpus: 2
+      ip: 192.168.122.50
+      ram: 2048
+      disk_size: 40
+    # - name: centos7
+    #   template: user-data_centos7
+    #   src_image: http://cloud.centos.org/centos/7/images/CentOS-7-x86_64-GenericCloud-1511.qcow2c.xz
+    #   vcpus: 1
+    #   ip: 192.168.122.50
+    #   ram: 4096
+    #   disk_size: 20
+    # - name: centos7_2
+    #   template: user-data_centos7
+    #   src_image: http://cloud.centos.org/centos/7/images/CentOS-7-x86_64-GenericCloud-1511.qcow2c.xz
+    #   vcpus: 1
+    #   ip: 192.168.122.51
+    #   ram: 4096
+    #   disk_size: 20
+  iptables:
+    - ip: 192.168.122.55
       ports:
-        - [22, 31022]
-        - [80, 31080]
-        - [3306, 31306]
-    - name: ubuntu14
-      template: Dockerfile_ubuntu14
-      sudo_group: sudo
-      ports:
-        - [22, 32022]
-        - [80, 32080]
-        - [3306, 32306]
+        - [46080, 46080]
+        - [40080, 40080]
+        - [43306, 43306]
+        - [49999, 49999]
