--- a/test-repo/fabfile.ini
+++ b/test-repo/fabfile.ini
@@ -1,7 +1,5 @@
 [DEFAULT]
-fablib = base: https://github.com/fabrickit-fablib/base.git,
-         test_bootstrap: https://github.com/fabrickit-fablib/test_bootstrap.git
+fablib = base: https://github.com/fabrickit-fablib/base.git
 
 [test]
 clusters = 'centos7'
-# clusters = 'ubuntu14'
