--- a/test-repo/fabfile.ini
+++ b/test-repo/fabfile.ini
@@ -2,6 +2,7 @@
 fablib = base: https://github.com/fabrickit-fablib/base.git
 
 [test]
-clusters = 'centos7'
+#clusters = 'centos7'
+clusters = 'ubuntu16'
 
-fablib = sample: ln:../..
+fablib = vpp: ln:../..
